css/style.css
/* ... */
html{
    font-family: 'Lato', sans-serif;
}
body{
    background-color:white;
    transition:all 0.5s ease;
}
nav.unscrolled{
    background-color:transparent;
    box-shadow:none;
}
nav{
    background-color:#275799;
    font-weight:bold;
    transition:all 0.5s ease;
    padding:0;
}
strong{
    font-weight:900;
}
#apply-btn{
    font-size:1.5rem;
    /*font-weight:bold;*/
}
.apply-btn{
    margin: 10px;
}

.deadline-banner{
    width: 40%;
    margin-left: auto;
    margin-right: auto;
    margin-top: -1.5%;
    margin-bottom: 1%;
    opacity: 0.8;
}
.deadline-banner .card-panel{
    padding: 15px !important;
}

@media (max-width: 667px) {
    .deadline-banner{
        width: 70%;
    }
}


.navbar-fixed{
    position:absolute;
    top:0;
    font-size:20px;
}
.hack-logo{
    padding-left: 1%;
    font-size:40px;
}
.hack-uci{
    height:35vmin;
}
.heading-image{
    background-image: url(../images/studentcentre.jpg);
    background-size: cover;
    background-repeat: none;
    background-position: 50% 50%;
    padding-top: 0;
    background-color:#010e1e;
    color:white;
    min-height:400px;
}

@media (min-width: 600px) {
    .heading-image {
        background-image: none;
    }
}

.background-video {
    position: relative;
    /*bottom: 0%;*/
    left: 0%;
    top: 50%;
    transform: translateY(-50%);
    /*width: 100vw;*/
    /*height: 100vw;*/
    height: auto;
    overflow: hidden;
    margin-top: 0px;
    margin-bottom: 0px;
}

.home-container {
    width: 100vw;
    height: 100vh;
    max-width: 100%;
    overflow: hidden;
}

.home-text {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    width: 100%;
}

.slogan{
    padding-bottom: 5%;
}
.about-info{
    color:#002f5f;
    font-size:30px;
}
.faq{
    background-color:#010e1e;
    color:white;
    /*min-height: 500px;*/
}
.application{
    min-height: 300px;
}
.card-panel{
    margin: 4% 0 0 0;
    transition: all 0.5s ease;
}
.card-color{
    background-color: #275799;
}
.info{
    font-size:7vmin;
    padding:0;
}
.heading{
    font-size:25px;
}
.card-info{
    padding-bottom:20px;
}
.sponsor-row {
    text-align: center;
    margin: 5% 2% 0% 2%;
}
.sponsor-image{
    width:50%;
    opacity: 0.5;
    margin: 0% 3% 0% 3%;
    vertical-align:middle;
}
.community-sponsor-image{
    max-height: 200px;
    max-width:60%;
    width: auto;
    height: auto;
    opacity: 0.5;
    margin: 0% 3% 0% 3%;
    vertical-align:middle;
}
.sponsor-image-2{
    max-width:25%;
    opactiy: 0.5;
    margin:10px;
}
.sponsor-image:hover{
    opacity:1;
}
.community-sponsor-image:hover{
    opacity:1;
}
.sponsor-image-featured{
    width:70%;
}
.sponsor-grid{
    display:flex;
    justify-content:center;
    align-items:center;
    height:150px;
}
.sponsors-coming-soon {
    margin-top: 0;
}

.community-sponsor-grid{
    display:flex;
    justify-content:center;
    align-items:center;
    height:200px;
}
.sponsor-btn{
    margin: 25px;
}
.menu-btn{
    margin-left: 10%;
}
.footer-copyright{
    /*background-color:#010e1e;*/
    background-color:#275799;
    color:white;
    padding:1%;
}
.foot{
    color:white;
}
.foot:hover{
    color:teal;
}
.foot-link{
    color:white;
    margin: 10px;
}

.modal{
    position:fixed;
    top:15%;
    width:50%;
    z-index:100000;
}
.email-text-area{
    height:200px;
}
.ahmed{
    font-size:70px;
    margin-top:0.5em;
    margin-bottom:0.7em;
}


.navbar-fixed > a {
    -webkit-text-stroke-width: 1px;
    -webkit-text-stroke-color: black;
}

.btn-animate:hover {
  -webkit-animation: btn-animation 1000ms linear both;
  animation: btn-animation 1000ms linear both;
}
/* ... */

